Remove duplicate call to updateDailyWorkTotals

--- a/index.html
+++ b/index.html
@@ -2271,6 +2271,7 @@ function applyTotalsDepartmentFilter() {
             renderEmployeeTable();
             updateDailyWorkTotals();
             showNotification('فیلتەری کات جێبەجێ کرا', 'success');
+            updateDailyWorkTotals();
         }
 
         // Handle login
